# claude-scientific-skills

./: pyproject.toml
docs/: skills.md
scientific-skills/rdkit/: SKILL.md
